# tetra-server

./: .gitignore  Cargo.toml  README.md
docs/: internal-subprotocol.md
src/: connection.rs  game.rs  main.rs  payload.rs  room.rs  signaling.rs  state.rs
src/connection/: common.rs  mod.rs  reliable.rs  unreliable.rs
src/endpoint/: helloworld.rs  mod.rs  ws.rs
src/payload/: common.rs  json.rs  mod.rs  schema.rs
testclient/: index.html  subprotocol.js
