[package]
name = "tetra-server"
version = "0.1.0"
edition = "2024"

[dependencies]
wincode = { version = "0.5.3", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = {version = "1.52.3", features = ["full"] }
wtransport = "0.7.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.102"
