[package]
name = "tetra-server"
version = "1.0.0"
edition = "2024"

[dependencies]
wincode = { version = "0.5.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = {version = "1.52.3", features = ["full"] }
wtransport = "0.7"
webrtc = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0.102"
serde_json = "1.0.150"
pastey = "0.2.3"
uuid = { version = "1.23.3", features = ["serde", "v4"] }
futures-util = "0.3.28"
bytes = "1.12.0"
dotenvy = "0.15"
libc = "0.2"
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
reqwest = { version = "0.13.4", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
